# VulkanW3DViewer

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  Rendering-plan.md  Texturing-plan.md  WORKFLOW.md  cliff.toml  mkdocs.yml
.claude/plans/: Library-extraction-and-terrain-rendering.md  phase-4.3-object-instantiation-scoping.md
.github/: AGENTS.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-tag.yml  build-os.yml  changelog-update.yml  clang-format.yaml  clang-format.yml  create-release.yml  docs.yml  main-tests.yml  manual-release.yml  pr-test.yml  release.yml  sync-dev.yml  unit-testing.yml
cmake/: EmbedShaders.cmake  generate-vulkan-mingw-lib.sh  mingw-w64-toolchain.cmake
docs/: index.md
docs/api/: index.md
docs/architecture/: core-layer.md  index.md  project-structure.md  rendering.md  ui-system.md  w3d-parser.md
docs/development/: branching-strategy.md  code-style.md  contributing.md  index.md  publishing-docs.md  testing.md
docs/getting-started/: building.md  index.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
docs/user-guide/: command-line.md  index.md  loading-models.md  navigation-controls.md  user-interface.md
docs/w3d-format/: animations.md  chunk-types.md  hierarchies.md  hlod.md  index.md  meshes.md  overview.md
scripts/: rebuild.ps1  rebuild.sh
shaders/: basic.frag  basic.vert  skeleton.frag  skeleton.vert  skinned.vert  terrain.frag  terrain.vert  water.frag  water.vert
src/: main.cpp
src/core/: app_paths.cpp  app_paths.hpp  application.cpp  application.hpp  application_paths.hpp  buffer.cpp  buffer.hpp  debug.hpp  pipeline.cpp  pipeline.hpp  render_state.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  shader_loader.hpp  vulkan_context.cpp  vulkan_context.hpp
src/lib/formats/big/: asset_registry.cpp  asset_registry.hpp  (+4 more)
src/lib/gfx/: bounding_box.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  frustum.cpp  frustum.hpp  pipeline.cpp  pipeline.hpp  renderable.hpp  rts_camera.cpp  rts_camera.hpp  texture.cpp  texture.hpp  vulkan_context.cpp  vulkan_context.hpp
src/lib/platform/: app_paths.cpp
src/lib/scene/: quadtree.cpp  quadtree.hpp  scene.cpp  scene.hpp  scene_graph.cpp  scene_graph.hpp  scene_node.cpp  scene_node.hpp
src/render/: animation_player.cpp  animation_player.hpp  bone_buffer.cpp  bone_buffer.hpp  bounding_box.hpp  camera.cpp  camera.hpp  hlod_model.cpp  hlod_model.hpp  hover_detector.cpp  hover_detector.hpp  lighting_state.cpp  lighting_state.hpp  material.hpp  mesh_converter.cpp  mesh_converter.hpp  object_node.cpp  object_node.hpp  object_placement_utils.cpp  object_placement_utils.hpp  object_resolver.cpp  object_resolver.hpp  raycast.cpp  raycast.hpp  renderable_mesh.cpp  renderable_mesh.hpp  skeleton.cpp  skeleton.hpp  skeleton_renderer.cpp  skeleton_renderer.hpp  texture.cpp  texture.hpp
src/render/terrain/: terrain_atlas.cpp  terrain_atlas.hpp  terrain_blend.cpp  terrain_blend.hpp  terrain_blend_data.cpp  terrain_blend_data.hpp  terrain_mesh.cpp  terrain_mesh.hpp  terrain_minimap.cpp  terrain_minimap.hpp  terrain_renderable.cpp  terrain_renderable.hpp  terrain_resource_manager.cpp  terrain_resource_manager.hpp
src/render/water/: water_mesh.cpp  water_mesh.hpp  water_renderable.cpp  water_renderable.hpp
src/ui/: console_window.cpp  console_window.hpp  file_browser.cpp  file_browser.hpp  hover_tooltip.cpp  hover_tooltip.hpp  imgui_backend.cpp  imgui_backend.hpp  map_browser.cpp  map_browser.hpp  map_viewport_window.cpp  map_viewport_window.hpp  model_browser.cpp  model_browser.hpp  settings_window.cpp  settings_window.hpp  ui_context.hpp  ui_manager.cpp  ui_manager.hpp  ui_panel.hpp  ui_window.hpp  viewport_window.cpp  viewport_window.hpp
src/ui/panels/: animation_panel.cpp  animation_panel.hpp  camera_panel.cpp  camera_panel.hpp  display_panel.cpp  display_panel.hpp  layer_toggles_panel.cpp  layer_toggles_panel.hpp  lod_panel.cpp  lod_panel.hpp  map_info_panel.cpp  map_info_panel.hpp  mesh_visibility_panel.cpp  mesh_visibility_panel.hpp  model_info_panel.cpp  model_info_panel.hpp  object_list_panel.cpp  object_list_panel.hpp  time_of_day_panel.cpp  time_of_day_panel.hpp
src/w3d/: animation_parser.cpp  animation_parser.hpp  chunk_reader.hpp  chunk_types.hpp  hierarchy_parser.cpp  hierarchy_parser.hpp  hlod_parser.cpp  hlod_parser.hpp  loader.cpp  loader.hpp  mesh_parser.cpp  mesh_parser.hpp  model_loader.cpp  model_loader.hpp  types.hpp  w3d.hpp
tests/: CMakeLists.txt
tests/core/: test_app_paths.cpp  test_settings.cpp
tests/gfx/: test_dynamic_buffer.cpp  test_pipeline_create_info.cpp  test_rts_camera.cpp
tests/ini/: test_ini_parser.cpp  test_terrain_types.cpp  test_water_settings.cpp
tests/map/: test_blend_tile_parser.cpp  test_data_chunk_reader.cpp  test_heightmap_parser.cpp  test_lighting_parser.cpp  test_map_chunk_reader.cpp  test_map_loader.cpp  test_objects_parser.cpp  test_real_map_loading.cpp  test_refpack.cpp  test_triggers_parser.cpp  test_worldinfo_sideslist_parser.cpp
tests/render/: raycast_test.cpp  test_animation_player.cpp  test_bounding_box.cpp  test_hlod_hover.cpp  test_lighting_state.cpp  test_mesh_converter.cpp  test_mesh_visibility.cpp  test_mipmap_calculation.cpp  test_skeleton_pose.cpp  test_texture_loading.cpp
tests/scene/: test_object_resolver.cpp  test_quadtree.cpp  test_scene_graph.cpp  test_scene_node.cpp
tests/stubs/: imgui.h
tests/stubs/GLFW/: glfw3.h
tests/stubs/core/: buffer.hpp  pipeline.hpp  render_state.hpp
tests/stubs/lib/gfx/: buffer.hpp  pipeline.hpp
tests/terrain/: test_frustum.cpp  test_terrain_atlas.cpp  test_terrain_blend.cpp  test_terrain_blend_data.cpp  test_terrain_mesh.cpp  test_terrain_minimap.cpp  test_terrain_resource_manager.cpp
tests/ui/: test_file_browser.cpp  test_map_browser.cpp
tests/w3d/: test_animation_parser.cpp  test_chunk_reader.cpp  test_hierarchy_parser.cpp  test_hlod_parser.cpp  test_loader.cpp  test_mesh_parser.cpp
tests/water/: test_water_mesh.cpp
(+43 files in other folders)
